# Bear

./: .gitignore  FuzzingTorchExtension.md
source/: CMakeLists.txt  config.h.in
source/bear/: CMakeLists.txt
source/bear/source/: Application.cc
source/intercept/: CMakeLists.txt
source/intercept/source/: Convert.cc
source/intercept/source/collect/: Intercept.cc  Intercept.h  RewriteConfig.h  RpcServices.cc  RpcServices.h  SessionLibrary.cc
source/rewrite/: CMakeLists.txt
source/rewrite/include/rewrite/: rewrite-forward.h
source/rewrite/source/: rewrite.cpp
